--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>stone-paper-scissor</title>
-        <link rel="stylesheet" href="css/rockpaperscissor.css">
+        <link rel="stylesheet" href="./style.css">
         
     </head>
     <body>
@@ -22,6 +22,6 @@
         " class="reset-button">Reset Score</button>
         <button class="auto-play-button" onclick="autoPlay();">Auto Play</button>
 
-        <script src="java/rockpaperscissor.js"> </script>
+        <script src="./script.js"> </script>
     </body>
 </html>
